# typed-store

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  workflow.md
.agent/rules/: agents.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  api-surface.md  design-spec.md  publishing.md
docs/architecture/: README.md  api-surface.md  publishing.md
docs/internal/: progress.md  workflow.md
docs/internal/templates/: progress-template.md  spec-template.md
docs/specs/: README.md  typed-store.md
docs/superpowers/plans/: 2026-03-29-protocol-first-public-sdk-v0-2.md  2026-03-29-protocol-first-public-sdk-v0-3.md  2026-03-30-public-sdk-v1-0.md
docs/superpowers/specs/: 2026-03-29-public-sdk-protocol-first-design.md  2026-03-30-public-sdk-v1-design.md
examples/: async_basic.py  async_repository_pattern.py  bulk_operations.py  model_mixin.py  model_store_view.py  repository_pattern.py  sync_basic.py
tests/: conftest.py  test_async_store.py  test_bound_model.py  test_error_boundaries.py  test_examples.py  test_protocols.py  test_public_api.py  test_shortcuts.py  test_specs.py  test_sync_store.py
todo/: README.md  _template.md  typed-store.md
typed_store/: __init__.py  async_store.py  bound_model.py  engine.py  errors.py  model.py  model_store.py  protocols.py  query_spec.py  results.py  session.py  specs.py  store.py  sync.py  uow.py
